tests/ui/consts/min_const_fn/min_const_unsafe_fn_libstd_stability.stderr
error: `foo` is not yet stable as a const fn
  --> $DIR/min_const_unsafe_fn_libstd_stability.rs:16:41
   |
LL | const unsafe fn bar() -> u32 { unsafe { foo() } }
   |                                         ^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `foo2` is not yet stable as a const fn
  --> $DIR/min_const_unsafe_fn_libstd_stability.rs:24:42
   |
LL | const unsafe fn bar2() -> u32 { unsafe { foo2() } }
   |                                          ^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `foo2_gated` is not yet stable as a const fn
  --> $DIR/min_const_unsafe_fn_libstd_stability.rs:33:48
   |
LL | const unsafe fn bar2_gated() -> u32 { unsafe { foo2_gated() } }
   |                                                ^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: aborting due to 3 previous errors

